tests/errors/test_26.xpp
// Can't get address of a constant variable

fn main() void {
    let x = 21;
    let y = &x;
}